--- a/book_store_app/src/assets/main.css
+++ b/book_store_app/src/assets/main.css
@@ -3,8 +3,15 @@
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0;
   font-weight: normal;
+  height: 100vh;
+  padding-top:5%;
+  padding-left: 2%;
+  padding-right: 1%;
+}
+body {
+  width: fit-content;
 }
 
 a,
@@ -25,7 +32,7 @@ a,
   body {
     display: flex;
     place-items: center;
-    background-color: rgb(198, 197, 197);
+    background-color: rgb(243, 241, 241);
   }
 
   /* #app {
