--- a/book_store_app/src/assets/main.css
+++ b/book_store_app/src/assets/main.css
@@ -30,7 +30,7 @@ a,
     display: flex;
     justify-content: center;
     place-items: center;
-    background-color: #b0b0b0;
+    background-color: rgb(136, 135, 135);
   }
 
   /* #app {
