--- a/book_store_app/src/assets/main.css
+++ b/book_store_app/src/assets/main.css
@@ -1,8 +1,9 @@
 @import './base.css';
 
 #app {
-  max-width: 100%;
-  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+  margin: 0;
   padding: 0;
   font-weight: normal;
   padding-top:4%;
@@ -28,12 +29,12 @@ a,
 }
 
 @media (min-width: 600px) {
-  body {
+  /* body {
     display: flex;
     justify-content: center;
     place-items: center;
     background-color: rgb(136, 135, 135);
-  }
+  } */
 
   /* #app {
     display: grid;
